# common-voice-asr

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  requirements.txt
Common-voice-asr/: .gitignore  Makefile  README.md  environment.yml  fetch_data.py  fetch_mini.py  plot_spectograms.py  preprocess.py  pyproject.toml  requirements.txt
Common-voice-asr/Neural Networks/: __init__.py  dataset.py  features.py  plots.py
Common-voice-asr/Neural Networks/modeling/: train.py
Common-voice-asr/data/: cleaned_lm.arpa  cleaned_manifest.csv  cleaned_text.txt  corpus.txt  lexicon.txt  lm.arpa  lm.binary  manifest.csv  manifest_full.csv
Common-voice-asr/docs/: mkdocs.yml
Common-voice-asr/docs/docs/: index.md  notes_week6_beam.md  reading_notes_week3.md  reading_notes_week4  reading_notes_week5.md
Common-voice-asr/models/: best_cnn.pth  best_rnn.pth
Common-voice-asr/neural_networks/: __init__.py  beam_search_decoder.py  beam_setup.py  cnn_encoder.py  config.py  dataset.py  datasets.py  features.py  greedy_ctc_decoder.py  log_best.py  plots.py  rnn_encoder.py  sweep.py  wrap_encoder.py
Common-voice-asr/neural_networks/configs/: week5_sweep.yaml  week6_sweep.yaml  week7_sweep.yaml
Common-voice-asr/neural_networks/modeling/: predict.py  train.py
Common-voice-asr/neural_networks/results/: week5_sweep.csv
Common-voice-asr/notebooks/: 04_first_cnn_rnn.ipynb  05_sequence_ctc.ipynb  06_hparam_sweep.ipynb
Common-voice-asr/runs/Jun05_18-00-07_Setons-Air/: events.out.tfevents.1749160807.Setons-Air.51953.0
Common-voice-asr/runs/Jun05_18-02-25_Setons-Air/: events.out.tfevents.1749160945.Setons-Air.52455.0
Common-voice-asr/runs/Jun05_18-09-49_Setons-Air/: events.out.tfevents.1749161389.Setons-Air.54124.0
Common-voice-asr/runs/Jun05_18-10-51_Setons-Air/: events.out.tfevents.1749161451.Setons-Air.54349.0
Common-voice-asr/runs/Jun05_18-11-51_Setons-Air/: events.out.tfevents.1749161511.Setons-Air.54598.0
Common-voice-asr/runs/Jun05_18-14-29_Setons-Air/: events.out.tfevents.1749161669.Setons-Air.55121.0
Common-voice-asr/runs/Jun05_18-17-36_Setons-Air/: events.out.tfevents.1749161856.Setons-Air.55863.0
Common-voice-asr/runs/Jun06_10-22-43_Setons-Air/: events.out.tfevents.1749219763.Setons-Air.21005.0
Common-voice-asr/runs/Jun06_10-24-39_Setons-Air/: events.out.tfevents.1749219879.Setons-Air.21476.0
Common-voice-asr/runs/Jun06_10-27-48_Setons-Air/: events.out.tfevents.1749220068.Setons-Air.22092.0
Common-voice-asr/runs/Jun06_10-27-50_Setons-Air/: events.out.tfevents.1749220070.Setons-Air.22099.0
Common-voice-asr/runs/Jun06_10-28-31_Setons-Air/: events.out.tfevents.1749220111.Setons-Air.22263.0
Common-voice-asr/runs/Jun06_10-28-47_Setons-Air/: events.out.tfevents.1749220127.Setons-Air.22336.0
Common-voice-asr/runs/Jun06_11-32-37_Setons-Air/: events.out.tfevents.1749223957.Setons-Air.36303.0
Common-voice-asr/runs/Jun06_11-38-15_Setons-Air/: events.out.tfevents.1749224295.Setons-Air.37554.0
Common-voice-asr/tests/: test_cnn_encoder.py  test_ctc_pipeline.py  test_data.py  test_rnn_encoder.py  test_sweep.py
(+168 files in other folders)
