[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "common-voice-asr"
version = "0.0.1"
description = "Creating neural networks based on speech data"
authors = [
  { name = "Seton Gerrity, Dmitrij Feller, Mozilla Foundation" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
dependencies = [
    "ipython",
    "jupyterlab",
    "loguru",
    "matplotlib",
    "mkdocs",
    "notebook",
    "numpy",
    "pandas",
    "pip",
    "pytest",
    "python-dotenv",
    "ruff",
    "scikit-learn",
    "tensorboard",
    "torch",
    "torchvision",
    "tqdm",
    "typer",
]
requires-python = ">=3.11.0, <3.14"

[tool.flit.module]
name = "neural_networks"

[tool.ruff]
line-length = 99
src = ["neural_networks"]
include = ["pyproject.toml", "neural_networks/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["neural_networks"]
force-sort-within-sections = true

